apps/monitoring/base/middlewares.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: stripprefix-prometheus
  namespace: monitoring
spec:
  stripPrefix:
    prefixes:
      - /prometheus
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: stripprefix-grafana
  namespace: monitoring
spec:
  stripPrefix:
    prefixes:
      - /grafana
